<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background"
    tools:context=".MainActivity"
    android:orientation="vertical"
>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="28sp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
    />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="5dp"
            >
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/names"
                android:paddingHorizontal="15dp"
                android:layout_marginHorizontal="10dp"
                android:textColorHint="@color/card_label_color"
                android:layout_marginVertical="10dp"
                android:paddingVertical="15dp"
                android:background="@drawable/carditem"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textCursorDrawable="@color/white"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/carditem"
                android:layout_marginBottom="15dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textColor="@color/card_label_color"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >
                    <EditText
                        android:id="@+id/weight"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/initialValue"
                        android:textStyle="bold"
                        android:textSize="35sp"
                        android:textColorHint="@color/card_label_color"
                        android:textCursorDrawable="@color/white"
                        android:inputType="numberDecimal"

                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kg"
                        android:layout_gravity="bottom"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_marginLeft="5dp"
                        />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/carditem"
                android:layout_marginBottom="15dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textColor="@color/card_label_color"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >
                    <EditText
                        android:id="@+id/height"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/initialValue"
                        android:textStyle="bold"
                        android:textSize="35sp"
                        android:textColorHint="@color/card_label_color"
                        android:textCursorDrawable="@color/white"
                        android:cursorVisible="true"
                        android:inputType="numberDecimal"

                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cm"
                        android:layout_gravity="bottom"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_marginLeft="5dp"
                        />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/calculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate"
                android:textAllCaps="false"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:paddingVertical="10dp"
                android:backgroundTint="@color/orange"


                />
            <LinearLayout
                android:id="@+id/result_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/carditem"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="15dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Username:"
                        android:textColor="@color/card_label_color"
                        android:textSize="20sp"
                        android:layout_marginRight="5dp"
                        />
                    <TextView
                        android:id="@+id/tvUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        />
                </LinearLayout>
                <TextView
                    android:id="@+id/resultFloat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/result"
                    android:textColor="@color/card_label_color"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    />
                <TextView
                    android:id="@+id/resultText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/result_text"
                    android:textColor="@color/result_text"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10sp"
                    />
                <TextView
                    android:id="@+id/resultDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@color/card_label_color"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10sp"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>